Overwrite existing installer script

--- a/templates/installer-customization.bu.j2
+++ b/templates/installer-customization.bu.j2
@@ -3,6 +3,7 @@ tang_persist_net:
   files:
     - path: /usr/libexec/coreos-installer-service
       mode: 0755
+      overwrite: true
       contents:
         inline: |
           #!/bin/bash
