--- a/templates/install-config.yaml.j2
+++ b/templates/install-config.yaml.j2
@@ -32,5 +32,5 @@ additionalTrustBundle: |
 platform:
   none: {}
 fips: {{fips_mode}}
-sshKey: "{{utility_ssh_public_key}}"
+sshKey: "{{provisioner_ssh_public_key}}"
 pullSecret: '{{pull_secret}}'
